--- a/cliente-service/src/main/resources/application.properties
+++ b/cliente-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=cliente-service
+# Configuración de la base de datos
+spring.datasource.url=jdbc:postgresql://clientes-db:5432/${CLIENTES_DB}
+spring.datasource.username=${CLIENTES_USER}
+spring.datasource.password=${CLIENTES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configuración de Keycloak
+keycloak.auth-server-url=http://keycloak:8080
+keycloak.realm=tpi-realm
+keycloak.resource=cliente-service
+keycloak.credentials.secret=${KEYCLOAK_ADMIN_PASSWORD}
+keycloak.client-id=cliente-service
