--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=gateway
+#spring.application.name=gateway
+#server.port=8080
+#clientes-service.url=http://localhost:8081
+#keycloak.url=http://localhost:8180
