--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -71,3 +71,36 @@ services:
 volumes:
   keycloak-data:
   clientes-data:
+
+#  keycloak:
+#    image: quay.io/keycloak/keycloak:24.0
+#    container_name: keycloak
+#    command:
+#      - start-dev
+#    environment:
+#      KC_DB: postgres
+#      KC_DB_URL: jdbc:postgresql://postgres_keycloak:5432/keycloak_db
+#      KC_DB_USERNAME: admin
+#      KC_DB_PASSWORD: admin
+#      KEYCLOAK_ADMIN: admin
+#      KEYCLOAK_ADMIN_PASSWORD: admin
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - postgres_keycloak
+#    networks:
+#      - microservices-net
+
+
+#  postgres_keycloak:
+#    image: postgres:16
+#    container_name: postgres_keycloak
+#    environment:
+#      POSTGRES_DB: keycloak_db
+#      POSTGRES_USER: admin
+#      POSTGRES_PASSWORD: admin
+#    volumes:
+#      - keycloak_data:/var/lib/postgresql/data
+#    networks:
+#      - microservices-net
+
