--- a/cliente-service/src/main/resources/application.yml
+++ b/cliente-service/src/main/resources/application.yml
@@ -1,16 +1,17 @@
 server:
-  port: 8081
-
+  port: 8082
 spring:
   application:
     name: cliente-service
-
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI}
   datasource:
-    url: jdbc:postgresql://postgres_cliente:5432/cliente_db
-    username: cliente_user
-    password: cliente_pass
-    driver-class-name: org.postgresql.Driver
-
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
@@ -18,9 +19,5 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgresSQLDialect
 
-springdoc:
-  api-docs:
-    enabled: true
-  swagger-ui:
-    enabled: true
