--- a/contenedor-service/pom.xml
+++ b/contenedor-service/pom.xml
@@ -6,9 +6,9 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.7</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
-	<groupId>com.tpibakend</groupId>
+	<groupId>com.tpibackend</groupId>
 	<artifactId>contenedor-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>contenedor-service</name>
