--- a/contenedor-service/src/main/resources/application.yml
+++ b/contenedor-service/src/main/resources/application.yml
@@ -1,16 +1,18 @@
 server:
   port: 8083
-
 spring:
   application:
     name: contenedor-service
-
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI}
   datasource:
-    url: jdbc:postgresql://postgres_contenedor:5432/contenedor_db
-    username: contenedor_user
-    password: contenedor_pass
+    url: ${SPRING_DATASOURCE_URL}
+    username:  ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
@@ -18,6 +20,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgresSQLDialect
 
 springdoc:
   api-docs:
