docker-compose.dev con servicios

--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -8,7 +8,7 @@
         <version>3.5.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.tpibakend</groupId>
+    <groupId>com.tpibackend</groupId>
     <artifactId>gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gateway</name>
