--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -5,15 +5,17 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8180/realms/tpi-backend
+          issuer-uri: ${SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI}
 server:
   port: 8080
 
+
 clientes-service:
-  url: http://localhost:8081
+  url: http://cliente-service:8082
 
-solicitudes-service:
-  url: http://localhost:8082
+solicitud-service:
+  url: http://solicitud-service:8083
 
-keycloak:
-  url: http://localhost:8180
+contenedor-service:
+  url: http://contenedor-service:8083
+
