coneccion geoapi hecha

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -17,3 +17,11 @@ solicitudes-service:
 
 keycloak:
   url: http://localhost:8180
+
+  cloud:
+    gateway:
+      routes:
+        - id: geo-service
+          uri: http://geo-service:8088
+          predicates:
+            - Path=/geo/**
