--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ CLIENTES_PASSWORD=clientes_password
 SOLICITUD_DB=solicitudes_db
 SOLICITUD_USER=solicitudes_user
 SOLICITUD_PASSWORD=solicitudes_password
+
+CONTENEDOR_DB=contenedor_db
+CONTENEDOR_USER=contenedor_user
+CONTENEDOR_PASSWORD=contenedor_password
