--- a/contenedor-service/src/main/resources/application.yml
+++ b/contenedor-service/src/main/resources/application.yml
@@ -19,5 +19,5 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.PostgresSQLDialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
