solicitud, ruta y tarifa

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ CONTENEDOR_DB=contenedor_db
 CONTENEDOR_USER=contenedor_user
 CONTENEDOR_PASSWORD=contenedor_password
 
+GOOGLE_MAPS_APIKEY=AIzaSyCOlA1fqNbQO5Yf-BpToZl8mUZ9MYyENEw
+
