--- a/cliente-service/src/main/resources/application.yml
+++ b/cliente-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: 'create-drop'
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
