--- a/solicitud-service/src/main/resources/application.yml
+++ b/solicitud-service/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: 'create-drop'
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
@@ -25,7 +25,7 @@ spring:
 cliente-service:
   url: http://cliente-service:8081/api/clientes
 contenedor-service:
-    url: http://contenedor-service:8082/api/contenedores
+  url: http://contenedor-service:8082/api/contenedores
 tarifa-service:
   url: http://tarifa-service:8087/api/tarifas
 ruta-service:
