--- a/tarifa-service/src/main/resources/application.yml
+++ b/tarifa-service/src/main/resources/application.yml
@@ -18,12 +18,16 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
+    defer-datasource-initialization: true
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  sql:
+    init:
+      mode: always
 
 springdoc:
   api-docs:
